Override pre width and margin to prevent wrapping

--- a/2014/fs-workshop-paris/css/theme/override.css
+++ b/2014/fs-workshop-paris/css/theme/override.css
@@ -18,6 +18,11 @@
   line-height: 1.5;
 }
 
+.reveal pre {
+  width: 105%;
+  margin-left: 0;
+}
+
 .reveal li {
   margin-top: 0.25em;
   margin-bottom: 0.25em;
